<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/checkin_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="27dp"
        android:gravity="center_horizontal"
        android:text="@string/checkin_process"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="23dp"
        android:gravity="center_horizontal"
        android:text="@string/firststep"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="18sp" />
    
       <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:text="@string/regsucc_continue"
        android:onClick="onClick" />

       <TextView
           android:id="@+id/textView4"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@+id/textView3"
           android:layout_centerHorizontal="true"
           android:gravity="center_horizontal"
           android:text="@string/secondstep"
           android:textAppearance="?android:attr/textAppearanceMedium"
           android:textSize="18sp" />

       <TextView
           android:id="@+id/textView5"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@+id/textView4"
           android:layout_centerHorizontal="true"
           android:gravity="center_horizontal"
           android:text="@string/thirdstep"
           android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
