<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:text="@string/twitter_relogin_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" >

        <RadioButton
            android:id="@+id/twitter_login_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"            
            android:text="@string/twitter_relogin" />

        <RadioButton
            android:id="@+id/twitter_login_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/twitter_skip" />
    </RadioGroup>

    <Button
        android:id="@+id/retryOrSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/regsucc_continue"
        android:onClick="twitterLoginRetry"/>

</RelativeLayout>
