<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/signupTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp"
        android:text="@string/welcome_title"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/signupTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupTextTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/welcome_line"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupTextUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="83dp"
        android:text="@string/welcome_start_button"
        android:onClick="onClick" />

</RelativeLayout>