<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/twitter_logon_txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:text="@string/twitter_login_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/twitter_logon_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/twitter_logon_txt1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:gravity="center_horizontal"
        android:text="@string/tl_instr_1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/twitterAuthURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/twitter_logon_txt2"        
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp" />

    <TextView
        android:id="@+id/twitter_login_txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:text="@string/tl_instr_2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/twitterPIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/twitter_login_txt3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:inputType="numberPassword"
        android:ems="10" >              
    </EditText>

    <Button
        android:id="@+id/submitpin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/twitterPIN"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/regsucc_continue"
        android:onClick="submitPIN" />
    
</RelativeLayout>
